# jsonld-proxy

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
jldp/: __init__.py  fapi.py  run_server.py
jldp/static/: index.html  main.js
service/: main.py
