[tool.poetry]
name = "jsonld-proxy"
version = "1.0.1"
description = "Present JSON-LD given a source URL"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyld = {git = "https://github.com/datadavev/pyld.git"}
requests = "^2.31.0"
fastapi = "^0.109.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.6"

[tool.poetry_bumpversion.file."jldp/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
